# Rendering

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
assets/: fragment.glsl  vertex.glsl
libs/simple_ini/: convert_utf.c  simple_ini.h
src/: main.cpp  shader.cpp  shader.h  types.h
